--- a/02/Carousel/index1.html
+++ b/02/Carousel/index1.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
-<html>
+
+<!doctype html>
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
-    <title>간단한 Carousel</title>
-    <script src="js.js"></script>
+    <title>문제소스</title>
 </head>
 <body>
 
+<div id="wrap"></div>
+<button id="left_button">이전</button>
+<button id="right_button">다음</button>
 
+<script src="js.js">
+    
+</script>
 
 </body>
 </html>
