--- a/02/Carousel/index1.html
+++ b/02/Carousel/index1.html
@@ -8,8 +8,8 @@
 <body>
 
 <div id="wrap"></div>
-<button id="left_button">이전</button>
-<button id="right_button">다음</button>
+<button id="leftButton">이전</button>
+<button id="rightButton">다음</button>
 
 <script src="js.js">
     
